--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -22,6 +22,10 @@
 				<button id="BtnConsoleClear" onclick="$('#Console').children().not(':button').remove();">Clear</button>
 			</div>
 
+			<div id="LoadingScreen">
+				<div id="LoadingScreenContent">Loading...</div>
+			</div>
+
 			<div id="GameWorldMap">
 			</div>
 			<div id="ToolbarContainer">
