* Created a unit turn concept. Units can now move/attack/capture once a player turn. Some units can move AFTER attack (Rhino tank) * Movement has a preview, in which player can cancel (undo) or confirm (Stay action) movement. Implemented simple undo flow. * Visibility is not refreshed during preview (avoids peek cheating). * Improved flow with quick actions (like capture & healing). * Capture and Stay action work by pressing on the tile itself (not only the menu entry). * Actions now have an onFinishTurn method to cleanup after themselves. * HUD is "Locked" while unit is taking a turn (avoids problems with Save/Load/Remove etc. while moving/attacking). * Improved flow with stuff depending on turn end, but only when not just loaded the game. (Fixes bug with effects advancing after load for no reason).

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -112,6 +112,7 @@
 			
 		<!-- Gameplay - Actions -->
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionMove.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionStay.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionAttack.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionCapture.js"></script>
 			
