--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -112,6 +112,7 @@
 			
 		<!-- Gameplay - Actions -->
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionMove.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionStay.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionAttack.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionCapture.js"></script>
 			
