--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -115,6 +115,7 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionStay.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionAttack.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionCapture.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionHeal.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitsDefinitions.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
