* Added healing action. * Units with more than 1 turnPoint don't remember actions from previous turn anymore. * Hide actions menu if unit is not owned by current player. (Prevents possibility to execute actions on other players units).

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -115,6 +115,7 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionStay.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionAttack.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionCapture.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionHeal.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitsDefinitions.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
