* Added simple system for "syncrhonization" by ids. Useful for multiplayer.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -99,6 +99,7 @@
 			
 			<script type="text/javascript" src="Javascript/Core/Engine/Systems/UtilsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Engine/Systems/GameWorld.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Engine/Systems/SynchronizationSystem.js"></script>
 			
 			
 		<!-- Gameplay -->
