* Added BattleSystem.js which can give prediction of the outcome of the battle and handles battle itself. * Changed the battle formula to be based on the strengths ratio. Health is taken into account. All units now have MaxHealth 10. * Health is not shown anymore when equals to MaxHealth. Also it is rounded. * Added "destroyed" flag to the entity. Invalidated entities keep this flag. * Fixed exception, when attacker is destroyed in battle.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -127,6 +127,7 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/TileVisibilitySystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/TileBaseSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/TileCapturingSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/BattleSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/GameStateSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/UnitsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Systems/EffectsSystem.js"></script>
