--- a/trunk/Internal Tools/BattleTestground/BattleTestground.html
+++ b/trunk/Internal Tools/BattleTestground/BattleTestground.html
@@ -300,13 +300,13 @@
 						<tr style="background: rgb(68, 82, 65);">
 							<td>
 								<span id="AttackerHealthPredictedLabel" class="range_value_label">10</span>
-								<input id="AttackerHealthPredicted" class="range_value" type="range" min="0" max="20" step="1" value="10" />
+								<input id="AttackerHealthPredicted" class="range_value" type="range" min="0" max="20" step="1" value="10" disabled="disabled" />
 							</td>
 
 							<td>HP Predicted</td>
 
 							<td>
-								<input id="DefenderHealthPredicted" class="range_value" type="range" min="0" max="20" step="1" value="10" />
+								<input id="DefenderHealthPredicted" class="range_value" type="range" min="0" max="20" step="1" value="10" disabled="disabled" />
 								<span id="DefenderHealthPredictedLabel" class="range_value_label">10</span>
 							</td>
 						</tr>
