* Show dynamically predicted strengths + ratio, next to predicted health.

--- a/Internal Tools/BattleTestground/BattleTestground.html
+++ b/Internal Tools/BattleTestground/BattleTestground.html
@@ -311,6 +311,23 @@
 							</td>
 						</tr>
 
+						<!-- Strengths -->
+						<tr style="background: rgb(68, 82, 65);">
+							<td>
+								<span id="AttackerStrengthPredictedLabel" class="range_value_label">2</span>
+								<input id="AttackerStrengthPredicted" class="range_value" type="range" min="0" max="10" step="0.1" value="2" disabled="disabled" />
+							</td>
+
+							<td>
+								<span id="StrengthPredictedRatio"></span>
+							</td>
+
+							<td>
+								<input id="DefenderStrengthPredicted" class="range_value" type="range" min="0" max="10" step="0.1" value="2" disabled="disabled" />
+								<span id="DefenderStrengthPredictedLabel" class="range_value_label">2</span>
+							</td>
+						</tr>
+
 					</tbody>
 
 				</table>
