--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -187,6 +187,10 @@
 			
 			<script type="text/javascript" src="Javascript/ActionsMenuController.js"></script>
 			<script type="text/javascript" src="Javascript/PlayerController.js"></script>
+
+			<script type="text/javascript" src="Javascript/ClientStates/ClientStates.js"></script>
+			<script type="text/javascript" src="Javascript/ClientStates/TestGame.js"></script>
+			<script type="text/javascript" src="Javascript/ClientStates/WorldEditor.js"></script>
 			
 			
 			<script type="text/javascript" src="Javascript/DevConsole.js"></script>
