--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -47,6 +47,9 @@
 
 			<div id="GameWorldMap">
 			</div>
+			<div id="GameWorldMapEditor">
+			</div>
+
 			<div id="ToolbarContainer">
 				<div id="Toolbar">
 					<button id="BtnSave">Save</button>
@@ -62,6 +65,9 @@
 
 					<button id="BtnConsole" onclick="$('#Console').toggle();">Console</button>
 				</div>
+			</div>
+
+			<div id="ToolbarContainerEditor">
 			</div>
 			
 			<div id="ActionMenu" style="display: none;">
@@ -188,7 +194,7 @@
 			<script type="text/javascript" src="Javascript/ActionsMenuController.js"></script>
 			<script type="text/javascript" src="Javascript/PlayerController.js"></script>
 
-			<script type="text/javascript" src="Javascript/ClientStates/ClientStates.js"></script>
+			<script type="text/javascript" src="Javascript/ClientStates/ClientStateManager.js"></script>
 			<script type="text/javascript" src="Javascript/ClientStates/TestGame.js"></script>
 			<script type="text/javascript" src="Javascript/ClientStates/WorldEditor.js"></script>
 			
