--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -52,18 +52,18 @@
 
 			<div id="ToolbarContainer">
 				<div id="Toolbar">
+					<button id="BtnConsole" onclick="$('#Console').toggle();">~</button>
 					<button id="BtnSave">Save</button>
 					<button id="BtnLoad">Load</button>
+					<button id="BtnPlayer">Player</button>
 					<button id="BtnRemoveTile">Rem</button>
 					<button id="BtnRestart">Res</button>
-					<button id="BtnPlayer">Player</button>
 					<button id="BtnDebug">Debug</button>
 
 					<button id="BtnBrowse" style="display: none;">Browse</button>
 					<input id="TbBrowseAddress" type="text" value="http://nibblebyte.no-ip.org/t" style="display: none;" />
 					<button id="BtnAddress">Address</button>
 
-					<button id="BtnConsole" onclick="$('#Console').toggle();">Console</button>
 				</div>
 			</div>
 
@@ -149,6 +149,8 @@
 			
 			
 		<!-- ==========	Mobile Client ====================== -->
+			<script type="text/javascript" charset="utf-8" src="Javascript/BrowserBackwardCompatibility.js"></script>
+
 		<!-- 3rd Party -->
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/wormhole.js"></script>
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/iscroll.js"></script> <!-- TODO: Use LITE, min version -->
