--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -53,7 +53,7 @@
 						<tbody>
 							<tr>
 								<td>Name:</td>
-								<td id="UnitPropsNameEditor">Name:</td>
+								<td id="UnitPropsNameEditor"></td>
 							</tr>
 							<tr>
 								<td>Health:</td>
@@ -68,6 +68,30 @@
 					<div class="dialog_buttons">
 						<button id="BtnUnitPropsApply">Apply</button>
 						<button id="BtnUnitPropsCancel">Cancel</button>
+					</div>
+				</div>
+			</div>
+
+			<div id="GamePropsEditor" class="dialog_blocker">
+				<div id="GamePropsEditorContainer" class="dialog dialog_container_floating">
+					<div class="dialog_title">Game Properties</div>
+
+					<table class="dialog_body">
+						<tbody>
+							<tr>
+								<td>Name:</td>
+								<td><input id="GamePropsNameEditor" type="text" value="Unknown Location" /></td>
+							</tr>
+							<tr>
+								<td>Description:</td>
+								<td><input id="GamePropsDescriptionEditor" type="text" value="" /></td>
+							</tr>
+						</tbody>
+					</table>
+
+					<div class="dialog_buttons">
+						<button id="BtnGamePropsApply">Apply</button>
+						<button id="BtnGamePropsCancel">Cancel</button>
 					</div>
 				</div>
 			</div>
@@ -98,6 +122,7 @@
 			<div id="ToolbarContainerEditor">
 				<div id="ToolbarEditor">
 					<button id="BtnConsoleEditor" onclick="$('#Console').toggle();">~</button>
+					<button id="BtnGamePropsEditor">Map</button>
 					<button id="BtnPanEditor">Pan</button>
 					<button id="BtnTerrainEditor">Terrain</button>
 					<button id="BtnPlaceablesEditor">Units</button>
@@ -257,6 +282,7 @@
 			<script type="text/javascript" src="Javascript/Editor/Brushes.js"></script>
 			<script type="text/javascript" src="Javascript/Editor/Systems/EditorController.js"></script>
 			<script type="text/javascript" src="Javascript/Editor/Systems/EditorUnitPropertiesController.js"></script>
+			<script type="text/javascript" src="Javascript/Editor/Systems/EditorGamePropertiesController.js"></script>
 
 			<script type="text/javascript" src="Javascript/ClientStates/WorldEditor.js"></script>
 			
