--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -86,6 +86,16 @@
 								<td>Description:</td>
 								<td><input id="GamePropsDescriptionEditor" type="text" value="" /></td>
 							</tr>
+
+
+							<tr>
+								<td>Width:</td>
+								<td><input id="GamePropsWidthEditor" type="number" min="2" max="20" step="1" value="" /></td>
+							</tr>
+							<tr>
+								<td>Height:</td>
+								<td><input id="GamePropsHeightEditor" type="number" min="2" max="20" step="1" value="" /></td>
+							</tr>
 						</tbody>
 					</table>
 
