* Added key-bindings for some Accept/Cancel buttons (mapped to Enter/ESC).

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -66,8 +66,8 @@
 					</table>
 
 					<div class="dialog_buttons">
-						<button id="BtnUnitPropsApply">Apply</button>
-						<button id="BtnUnitPropsCancel">Cancel</button>
+						<button id="BtnUnitPropsApply" class="btn_apply">Apply</button>
+						<button id="BtnUnitPropsCancel" class="btn_cancel">Cancel</button>
 					</div>
 				</div>
 			</div>
@@ -100,8 +100,8 @@
 					</table>
 
 					<div class="dialog_buttons">
-						<button id="BtnGamePropsApply">Apply</button>
-						<button id="BtnGamePropsCancel">Cancel</button>
+						<button id="BtnGamePropsApply" class="btn_apply">Apply</button>
+						<button id="BtnGamePropsCancel" class="btn_cancel">Cancel</button>
 					</div>
 				</div>
 			</div>
