--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -6,7 +6,7 @@
 		<title>Mobile Tactics</title>
 		
 		<!-- ==========	Render ====================== -->
-			<link rel="stylesheet" href="Assets/Render/GameWorldRenderer.css" type="text/css" media="screen">
+			<link rel="stylesheet" href="Assets/Render/SceneRenderer.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Render/TileRenderingSystem.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Render/Placeables.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/ActionMenu.css" type="text/css" media="screen">
@@ -289,6 +289,7 @@
 			<script type="text/javascript" src="Javascript/Render/ImageUtils/Colors.js"></script>
 			<script type="text/javascript" src="Javascript/Render/ImageUtils/SpriteColorizeManager.js"></script>
 			<script type="text/javascript" src="Javascript/Render/ImageUtils/SpriteTracker.js"></script>
+			<script type="text/javascript" src="Javascript/Render/SceneRenderer.js"></script>
 		
 		<!-- Components -->
 			<script type="text/javascript" src="Javascript/Render/Components/CAnimations.js"></script>
