* BattleRenderingManager now initializes two battle fields systems with their separate rendering (canvases). Resizing is handled correctly, scenes are scaled down when needed (so image is preserved). * Moved BattleScreen stuff to separate css file.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -13,6 +13,7 @@
 			<link rel="stylesheet" href="Assets/DevConsole.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Dialogs.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Game.css" type="text/css" media="screen">
+			<link rel="stylesheet" href="Assets/BattleScreen.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Editor.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Main.css" type="text/css" media="screen">
 		
@@ -330,7 +331,10 @@
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Base.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/TeslaTrooper.js"></script>
 
+
+
 		<!-- Battle Screen -->
+			<script type="text/javascript" src="Javascript/BattleRendering/BattleFieldRenderer.js"></script>
 			<script type="text/javascript" src="Javascript/BattleRendering/BattleRenderingManager.js"></script>
 			
 
