Battle Screen: * Added some more infrastructure. Added core battle events (due to change). * BattleField systems/rendering now know their direction (if they are left or right). * Changed original size to 1120x720. * The unit's tile background is now rendered to his side. Added sample assets for tile backgrounds. * Fixed: battle fields separator was beneath the canvases.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -334,7 +334,12 @@
 
 
 		<!-- Battle Screen -->
+			<script type="text/javascript" src="Javascript/BattleRendering/BattleRenderingEvents.js"></script>
 			<script type="text/javascript" src="Javascript/BattleRendering/BattleFieldRenderer.js"></script>
+
+			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldBackgroundSystem.js"></script>
+			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldRenderingSystem.js"></script>
+
 			<script type="text/javascript" src="Javascript/BattleRendering/BattleRenderingManager.js"></script>
 			
 
