--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -334,7 +334,12 @@
 
 
 		<!-- Battle Screen -->
+			<script type="text/javascript" src="Javascript/BattleRendering/BattleRenderingEvents.js"></script>
 			<script type="text/javascript" src="Javascript/BattleRendering/BattleFieldRenderer.js"></script>
+
+			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldBackgroundSystem.js"></script>
+			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldRenderingSystem.js"></script>
+
 			<script type="text/javascript" src="Javascript/BattleRendering/BattleRenderingManager.js"></script>
 			
 
