--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -331,6 +331,8 @@
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Base.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/TeslaTrooper.js"></script>
 
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Particles/GroundExplosion.js"></script>
+
 
 
 		<!-- Battle Screen -->
@@ -344,6 +346,8 @@
 			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldControllerSystem.js"></script>
 			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldBackgroundSystem.js"></script>
 			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldUnitsRenderingSystem.js"></script>
+			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldUnitsAnimationsController.js"></script>
+			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldUnitsParticleSystem.js"></script>
 
 			<script type="text/javascript" src="Javascript/BattleRendering/BattleRenderingManager.js"></script>
 			
