* Animations: Added concept of anchor point in the animation definitions. * BattleScreen: added idle-attack-defend-die flow. Animations change accordingly. * BattleScreen: Random units now die. Added explosions over units on dying (Particles binded to unit). * Rendering: fixed static images not flipping bug. * ECS: Added component initializer option, to initialize before notifications happen. * ECS: Added delayed (async) execution option, so you can execute stuff AFTER the current event is done. * Utils: Random numbers functions.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -331,6 +331,8 @@
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Base.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/TeslaTrooper.js"></script>
 
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Particles/GroundExplosion.js"></script>
+
 
 
 		<!-- Battle Screen -->
@@ -344,6 +346,8 @@
 			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldControllerSystem.js"></script>
 			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldBackgroundSystem.js"></script>
 			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldUnitsRenderingSystem.js"></script>
+			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldUnitsAnimationsController.js"></script>
+			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldUnitsParticleSystem.js"></script>
 
 			<script type="text/javascript" src="Javascript/BattleRendering/BattleRenderingManager.js"></script>
 			
