--- a/trunk/MobileClient/LocalFiles/index.html
+++ b/trunk/MobileClient/LocalFiles/index.html
@@ -136,6 +136,7 @@
 				<button id="BtnAddress">Address</button>
 				<button id="BtnBrowse" style="display: none;">Browse</button>
 				<input id="TbBrowseAddress" type="text" value="http://nibblebyte.no-ip.org/t" style="display: none;" />
+				<button id="BtnUndo">Undo</button>
 
 			</div>
 
@@ -146,7 +147,6 @@
 					<button id="BtnLoad">Load</button>
 					<button id="BtnPlayer">Player</button>
 					<button id="BtnRemoveTile">Rem</button>
-
 				</div>
 			</div>
 
