* Buying units now has a special ActionBuy too, that is undoable. Yey!

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -243,6 +243,8 @@
 			
 		<!-- Gameplay - Actions -->
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionCreate.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionBuy.js"></script>
+
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionMove.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionStay.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionAttack.js"></script>
