Battle rendering orientation: * Implemented different Portrait and Landscape modes of the battle rendering. Depending on the orientation, the sizes and flows change. When in portrait, only one field is shown, then pan to the other etc (using iScroll). * On resize (orientation change), battle visualization is restarted. * Anchored the battle bachground & units to the bottom of the field, so height can be changed depending on orientation.
* killed concept added, so dead units don't resurrect on changing state.
* Fixed: particles layer now changes properly on resize/restart

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -50,9 +50,11 @@
 
 					<div id="BattleFields">
 
-						<div id="BattleFieldLeft" class="battle_field"></div>
+						<div id="BattleFieldLeft" class="battle_field"></div><!-- 
+						HACK: Remove white-space between these 2 divs, so they stay on the same line at 50% width.
+					 --><div id="BattleFieldRight" class="battle_field"></div>
+
 						<div id="BattleFieldSeparator"></div>
-						<div id="BattleFieldRight" class="battle_field"></div>
 					</div>
 				</div>
 			</div>
